The POST request to /api/students returned a response of 1 and status 200 OK